fix close button on mobile menu

--- a/src/components/MenuMobile/MenuMobile.scss
+++ b/src/components/MenuMobile/MenuMobile.scss
@@ -40,8 +40,8 @@
 
 .overlay .close_btn {
   position: absolute;
-  top: 0.5em;
-  right: 0.5em;
+  top: 15px;
+  right: 15px;
   font-size: 5em;
   color: white;
   background-color: $dark_blue;
